[tool.poetry]
name = "nonebot-plugin-groupaccountant"
version = "0.0.2"
description = "A group chat accountant plugin for nonebot"
authors = ["shilapi <shilapi@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/shilapi/nonebot-plugin-groupAccountant"
repository = "https://github.com/shilapi/nonebot-plugin-groupAccountant"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.1"
nonebot-adapter-onebot = "^2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
