[tool.poetry]
name = "nonebot-plugin-chataccountant"
version = "0.0.3"
description = "A group chat accountant plugin for nonebot"
authors = ["shilapi <shilapi@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.1"
nonebot-adapter-onebot = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
